# documents

Master-of-TUTE/Master-of-Electronic-Information-main/: README.md
Master-of-TUTE/Master-of-Electronic-Information-main/Qt_yolo/demo2/: CMakeLists.txt
Master-of-TUTE/Master-of-Electronic-Information-main/Qt_yolo/demo2/src/: main.cpp  yolo_code.cpp  yolo_code.h
linux_bulid_study/: README.md
linux_bulid_study/exp/: check_tool.sh  config.mk  create_config.sh  function_test.sh  lfs_automation.sh  log_test.sh  sed_practice.sh  setup_check.sh
linux_bulid_study/guide/: LFS视频笔记.md
linux_bulid_study/lfs_study/: Class1-check_host.sh  Class1.md  Class10-build_temp_tools_part1.sh  Class10.md  Class11-build_shell_core.sh  Class11.md  Class12-build_remaining_tools.sh  Class12.md  Class13-chroot.md  Class13-enter_chroot.sh  Class13.md  Class14-init_chroot_system.sh  Class14.md  Class15-build_extra_tools.sh  Class15.md  Class16-system_backup.sh  Class16.md  Class17.md  Class2-setup_disk.sh  Class2.md  Class3-download_sources.sh  Class3.md  Class4-setup_lfs_user.sh  Class4.md  Class5-build_binutils_pass1.sh  Class5.md  Class6-build_gcc_pass1.sh  Class6.md  Class7-install_linux_headers.sh  Class7.md  Class8-build_glibc.sh  Class8.md  Class9-build_libstdcxx.sh  Class9.md  Readme.md
linux_bulid_study/shell_study/: README.md
linux_kernel_study/000-filesystem_study/: smartfishfs_note.md  公开课_note.md
linux_kernel_study/01_hello_world/: .Module.symvers.cmd  .gitignore  .modules.order.cmd  Makefile  (+9 more)
notes/: git_note.md
study/: git_note.md  note1.md  server_note.md  step1.md
(+131 files in other folders)
